# etherfi-data-catalog

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  ROADMAP.md  agents.md  pyproject.toml
.codex/: config.example.toml  config.toml
.github/ISSUE_TEMPLATE/: monday_mvp_ticket.md
.github/workflows/: deploy-website.yml  docker-smoke.yml  refresh-freshness.yml
dashboards/cash/: etherfi_cash.yaml
dashboards/stake/: etherfi_overview.yaml
datasets/activity/: addresses_transfers_intermediate.yaml  tokens_transfers_daily.yaml
datasets/etherfi_protocol/: etherfi_assets_under_management.yaml  etherfi_cash_addresses.yaml  etherfi_cash_events.yaml  etherfi_competitive_assets_holders_with_defi.yaml  etherfi_protocol_events.yaml  etherfi_protocol_token_holders_with_defi.yaml  etherfi_protocol_token_tvl.yaml
datasets/metadata/: addresses_list.yaml  (+3 more)
docs/: agent_workflow.md  dataset_documentation_progress.md  mcp_deployment.md  sql_style_guide.md
etherfi_catalog/: catalog.py  server.py
scripts/: build_website.py  refresh_catalog_status.sh  render_cash_holdings_bar_race_gif.py  smoke_mcp_http.py  update_freshness_from_dune.py  update_freshness_from_tracker.py
src/: catalog.py  server.py
status/: dataset_freshness.example.yaml
tests/: test_catalog.py  test_container_config.py  test_freshness_dune_importer.py  test_freshness_importer.py  test_freshness_workflow.py  test_mcp_http_smoke.py  test_mcp_prompt_regressions.py  test_orchestration_regressions.py  test_packaging.py  test_server.py  test_website_build.py  test_website_deploy_workflow.py
(+51 files in other folders)
