[project]
name = "etherfi-catalog-mcp"
version = "0.1.0"
description = "ether.fi analytics catalog MCP server"
requires-python = ">=3.10"
dependencies = [
  "dune-client",
  "mcp",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
etherfi-catalog-mcp = "etherfi_catalog.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etherfi_catalog*"]

[tool.setuptools.package-data]
etherfi_catalog = [
  "data/datasets/**/*.yaml",
  "data/dashboards/**/*.yaml",
  "data/status/*.yaml",
]
